# Fault-Tolerant-Hamiltonian-Simulation

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  REFERENCES.md  ROADMAP.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
course/: 00_START_HERE.md  01_PAULI_HAMILTONIANS.md  02_EXACT_EVOLUTION.md  03_PRODUCT_FORMULAS.md  04_PHASE_ESTIMATION.md  05_BLOCK_ENCODING_QUBITIZATION.md  06_QEC_STABILIZERS.md  07_SURFACE_CODE_FAULT_TOLERANCE.md  08_LOGICAL_RESOURCE_ESTIMATION.md  09_PHYSICAL_RESOURCE_ESTIMATION.md  10_CAPSTONE.md  README.md
examples/: 01_exact_single_qubit.py  02_ising_exact_vs_trotter.py  03_trotter_convergence.py  04_phase_estimation_distribution.py  05_logical_resource_estimate.py  06_surface_code_toy_model.py  07_qiskit_trotter_circuit.py
examples/qdk/: README.md  ising_trotter.qs  run_qre.py
exercises/: 01_pauli_and_ising.md  02_trotter.md  03_qec_resources.md
notebooks/: 00_start_here.ipynb  01_trotter_lab.ipynb  02_resource_estimation_lab.ipynb
scripts/: init_git.ps1  init_git.sh  run_core_examples.ps1  run_core_examples.sh
solutions/: 01_pauli_and_ising.md  02_trotter.md  03_qec_resources.md
src/ft_ham_sim/: __init__.py  hamiltonians.py  metrics.py  operators.py  qpe.py  resources.py  surface_code.py  trotter.py
tests/: test_operators.py  test_qpe.py  test_resources.py  test_trotter.py
