[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft-ham-sim"
version = "0.1.0"
description = "A project-based course on Hamiltonian simulation, resource estimation, and fault-tolerant quantum computing."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [{name = "Ariadna Palomino"}]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.13",
  "matplotlib>=3.8",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "jupyterlab>=4", "nbformat>=5.10"]
qiskit = ["qiskit>=2.2,<3"]
qualtran = ["qualtran"]
qre = ["qdk[qre]"]
all = ["pytest>=8", "jupyterlab>=4", "nbformat>=5.10", "qiskit>=2.2,<3", "qualtran", "qdk[qre]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
